[package]
name = "rustgl"
version = "0.0.1"
authors = [ ]

build = [ "make -C src -f bindings.Makefile all" ]

[dependencies.egl]
path = "./deps/rust-egl"

[dependencies.opengles]
path = "./deps/rust-opengles"

[lib]
name = "rustgl"
path = "src/lib.rs"
test = false
doctest = false
doc = false
plugin = false
crate-type = ["staticlib"]
