[package]
name = "rustgl"
version = "0.0.1"
authors = [ ]

build = [ "./mkbindings.py --prefix ./src bindings.json build" ]

[dependencies.egl]
path = "./deps/rust-egl"

[dependencies.opengles]
path = "./deps/rust-opengles"

[dependencies.lua]
path = "./deps/rust-lua"

[lib]
name = "rustgl"
path = "src/lib.rs"
test = false
doctest = false
doc = false
plugin = false
crate-type = ["staticlib"]
